Issue #9: Validaton messages bugfix

--- a/src/main/resources/ch/codebulb/crudfaces/ValidationMessages.properties
+++ b/src/main/resources/ch/codebulb/crudfaces/ValidationMessages.properties
@@ -4,6 +4,7 @@
 # Template
 # --------
 javax.faces.validator.BeanValidator.MESSAGE={1}: {0}
+javax.faces.validator.BeanValidator.MESSAGE_detail={0}
 
 # Messages
 # --------
